# IA-Proyecto3

./: README_HYDRA.md  datamodule.py  dataset.py  dataset_preparation.ipynb  experimento2_denoising_autoencoder.ipynb  experimento_1_autoencoder_modular.ipynb  hydra_config.py  pyproject.toml  requirements_hydra.txt
config/: base_config.yaml  config.yaml
config/data/: butterfly_dataset.yaml
config/experiment_1/: config.yaml
config/experiment_2/: config.yaml
config/model/: denoising_autoencoder.yaml  unet_autoencoder.yaml
config/training/: default.yaml
filtered_dataset/: filtered_dataset_metadata.csv
lightning_logs/version_10/: metrics.csv
lightning_logs/version_11/: metrics.csv
lightning_logs/version_12/: metrics.csv
lightning_logs/version_13/: metrics.csv
lightning_logs/version_14/: metrics.csv
lightning_logs/version_15/: metrics.csv
lightning_logs/version_16/: metrics.csv
lightning_logs/version_17/: metrics.csv
lightning_logs/version_18/: metrics.csv
lightning_logs/version_19/: metrics.csv
lightning_logs/version_20/: metrics.csv
lightning_logs/version_21/: metrics.csv
lightning_logs/version_22/: metrics.csv
lightning_logs/version_23/: metrics.csv
lightning_logs/version_24/: metrics.csv
lightning_logs/version_25/: metrics.csv
lightning_logs/version_26/: hparams.yaml  metrics.csv
lightning_logs/version_27/: metrics.csv
lightning_logs/version_28/: metrics.csv
lightning_logs/version_29/: hparams.yaml  metrics.csv
lightning_logs/version_30/: metrics.csv
lightning_logs/version_31/: hparams.yaml  (+1 more)
wandb/: latest-run
(+55 files in other folders)
